Initial Update of Default Page Template
A first attempt at cleaning up the initial (and currently only) page template:

* Wrapped everything in a Bootstrap fluid container
* Put a row and column around all content
* Added CSS rule to hide the #masthead div that appears above the content area (and below our ASU main nav)

--- a/assets/css/src/global.css
+++ b/assets/css/src/global.css
@@ -81,6 +81,12 @@
 	color: #d23153;
 }
 
+/*!
+Hide the masthead
+*/
+#masthead {
+	display: none;
+}
 
 /*--------------------------------------------------------------
 # Accessibility
